update cv analyse function